Fix openapi docs
